--- a/cards/index.html
+++ b/cards/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div 
-  class="slide active"
+  class="slide"
   style="background-image: url(https://images.unsplash.com/photo-1582854050148-651d87fa3319?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);"
   >
   <h3>Ferrari</h3>
