--- a/board/index.html
+++ b/board/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container" id="board"></div>
-  
+  <div class="list-color container"></div>
   <script src="app.js"></script>
 </body>
 </html>
